--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase": "^8.6.1",
+    "firebase-admin": "^9.8.0",
     "nodemon": "^2.0.7",
     "shortid": "^2.2.16"
   }
